style: add styles for Experience component images and titles in global CSS

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,4 +37,12 @@ body {
   h2, h1{
     @apply text-lg
   }
+
+  .exp-img{
+    @apply w-15 h-15 rounded-full 
+  }
+
+  .exp-title{
+    @apply text-foreground
+  }
 }
