--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
   --foreground: #0a0a0a;
   --border: #262626;
   --secondary: #a3a3a3;
+  --dark-bg-secondary: #212121;
 }
 
 @theme inline {
@@ -12,6 +13,7 @@
   --color-foreground: var(--foreground);
   --color-border: var(--border);
   --color-secondary: var(--secondary);
+  --color-dark-bg-secondary: var(--dark-bg-secondary);
 
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
