--- a/app/globals.css
+++ b/app/globals.css
@@ -3,11 +3,11 @@
 :root {
   --background: #fcfcfc;
   --foreground: #0a0a0a;
-  --secondary-foreground: #;
+  --secondary-foreground: #737373;
   --secondary-bg: #ebebeb;
 
   --border: #262626;
-  --foreground-dark: #a3a3a3;
+  --secondary-foreground-dark: #a3a3a3;
   --secondary-bg-dark: #212121;
 }
 
@@ -15,9 +15,9 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-secondary-bg: var(--secondary-bg);
-  --color-secondary-foreground: var(--foreground-dark);
+  --color-secondary-foreground: var(--secondary-foreground-dark);
 
-  --foreground-dark: var(--secondary);
+  --secondary-foreground-dark: var(--secondary);
   --color-border: var(--border);
   --color-secondary-bg-dark: var(--secondary-bg-dark);
 
